--- a/JS and Co/PhysicsJS/ThreeJS/Map/ProceduralMap.html
+++ b/JS and Co/PhysicsJS/ThreeJS/Map/ProceduralMap.html
@@ -15,7 +15,7 @@
   </style>
 </head>
 <body>
-  <script src="src/script PR1.js"></script>
+  <script src="src/script.js"></script>
   <script ></script>
 </body>
 </html>
